--- a/client/src/components/List/style.css
+++ b/client/src/components/List/style.css
@@ -31,3 +31,9 @@
 .list-overflow-container li:last-child {
   border-bottom: none;
 }
+img{
+  width: 40px;
+  height: 50px;
+  border-top: 2px;
+  border-bottom: 2px;
+}
